# gpt-experiment_UMID-fcfa0e03-7252-43bb-9315-86f970e6f028

./: .gitignore  README.md  UMID-fcfa0e03-7252-43bb-9315-86f970e6f028  mypy.ini  pyproject.toml  requirements.txt
src/gpt_experiment/: __init__.py  file_reader.py  main.py
src/gpt_experiment/sample_data/: hunger-story.md
