[tool.poetry]
name = "gpt-experiment"
version = "0.1.0"
description = ""
authors = ["mariomui"]
readme = "README.md"
packages = [{include = "gpt_experiment", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.4"


[tool.poetry.scripts]
start = "gpt_experiment:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
darker = "^1.7.0"
pylint = "^2.17.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.darker]
line-length = 80                  # Passed to isort and Black, override their config
lint = [
    "pylint",
]
# flake8 doesnt get passed args here.
